--- a/style.css
+++ b/style.css
@@ -146,3 +146,23 @@ header {
 .quality {
     margin-top: 3em;
 }
+
+@media (max-width: 600px) {
+    .row {
+        display: block;
+    }
+
+    .hero__text
+    .hero__img
+    .quality-text
+    .quality-price {
+        width: 100%;
+        padding: 1em;
+    }
+    .hero__img {
+        margin-top: 2em;
+    }
+    .btn {
+        margin-bottom: 1em;
+    }
+}
